@@ -6,12 +6,6 @@ import morepath
 from morepath.error import ConflictError
 from morepath.tests.fixtures.config_files import settings as settings_file
 
-try:
-    import yaml  # noqa
-    has_yaml = True
-except ImportError:
-    has_yaml = False
-
 
 def setup_module(module):
     morepath.disable_implicit()
@@ -181,43 +175,6 @@ def test_loading_settings_from_json():
 
     config = open('morepath/tests/fixtures/config_files/settings.json')
     settings_dict = json.load(config)
-
-    assert settings_dict == settings_file.settings
-
-    class App(morepath.App):
-        pass
-
-    App.init_settings(settings_dict)
-    morepath.commit(App)
-
-    app = App()
-
-    assert app.settings.chameleon.debug is True
-    assert app.settings.jinja2.auto_reload is False
-    assert app.settings.jinja2.autoescape is True
-    assert app.settings.jinja2.extensions == [
-        'jinja2.ext.autoescape',
-        'jinja2.ext.i18n'
-    ]
-    assert app.settings.jwtauth.algorithm == 'ES256'
-    assert app.settings.jwtauth.leeway == 20
-    assert app.settings.jwtauth.public_key == \
-        'MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQBWcJwPEAnS/k4kFgUhxNF7J0SQQhZG'\
-        '+nNgy+/mXwhQ5PZIUmId1a1TjkNXiKzv6DpttBqduHbz/V0EtH+QfWy0B4BhZ5MnT'\
-        'yDGjcz1DQqKdexebhzobbhSIZjpYd5aU48o9rXp/OnAnrajddpGsJ0bNf4rtMLBqF'\
-        'YJN6LOslAB7xTBRg='
-    assert app.settings.sqlalchemy.url == 'sqlite:///morepath.db'
-    assert app.settings.transaction.attempts == 2
-
-
-@pytest.mark.skipif(
-    not has_yaml,
-    reason='Not supported without pyyaml library'
-)
-def test_loading_settings_from_yaml():
-
-    config = open('morepath/tests/fixtures/config_files/settings.yml')
-    settings_dict = yaml.load(config)
 
     assert settings_dict == settings_file.settings
 
