@@ -12,7 +12,6 @@ deps=
      -e{toxinidir}/fixture_packages/ns2
      -e{toxinidir}/fixture_packages/entry-point
      -e{toxinidir}/fixture_packages/under_score
-     pyyaml
 commands=
      pip install --upgrade pip
      pip install --upgrade setuptools
@@ -36,6 +35,7 @@ commands = py.test morepath --cov morepath {posargs}
 basepython = python2
 deps = {[testenv]deps}
        sphinx
+       pyyaml
 
 commands = sphinx-build -b doctest doc {envtmpdir}
 
